--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
+<!-- views/error.ejs -->
 <div class="card bg-danger text-white">
   <div class="card-body">
     <h4 class="card-title"><i class="bi bi-exclamation-triangle"></i> Error</h4>
