--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -1,5 +1,6 @@
+<!-- views/layouts/main.ejs -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,29 +13,35 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body class="bg-dark text-light">
+  <body class="d-flex flex-column h-100 bg-dark text-light">
     <%- include('../partials/header') %>
 
-    <main class="container mt-4">
-      <% if(success_msg && success_msg.length > 0) { %>
-      <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <%= success_msg %>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"></button>
+    <main class="flex-shrink-0">
+      <div class="container mt-4">
+        <% if(success_msg && success_msg.length > 0) { %>
+        <div
+          class="alert alert-success alert-dismissible fade show"
+          role="alert">
+          <%= success_msg %>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"></button>
+        </div>
+        <% } %> <% if(error_msg && error_msg.length > 0) { %>
+        <div
+          class="alert alert-danger alert-dismissible fade show"
+          role="alert">
+          <%= error_msg %>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"></button>
+        </div>
+        <% } %> <%- body %>
       </div>
-      <% } %> <% if(error_msg && error_msg.length > 0) { %>
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <%= error_msg %>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"></button>
-      </div>
-      <% } %> <%- body %>
     </main>
 
     <%- include('../partials/footer') %>
