--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,6 @@
-<footer class="mt-5 py-3 bg-dark text-light">
+<!-- views/partials/footer.ejs -->
+
+<footer class="footer mt-auto py-3 bg-dark text-light">
   <div class="container text-center">
     <span>&copy; 2023 Issue Tracker. All rights reserved.</span>
   </div>
