--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,5 @@
+<!-- views/partials/header.ejs -->
+
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
