--- a/views/projects/create.ejs
+++ b/views/projects/create.ejs
@@ -1,3 +1,5 @@
+<!-- views/projects/create.ejs -->
+
 <h1 class="mb-4"><i class="bi bi-plus-circle"></i> Create New Project</h1>
 
 <div class="card bg-secondary text-light">
