--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -1,3 +1,4 @@
+<!-- views/projects/index.ejs -->
 <h1 class="mb-4"><i class="bi bi-kanban"></i> Projects</h1>
 <a href="/projects/create" class="btn btn-primary mb-3"
   ><i class="bi bi-plus-circle"></i> Create New Project</a
